--- a/src/layouts/SiteLayout.astro
+++ b/src/layouts/SiteLayout.astro
@@ -17,6 +17,10 @@ import '@fontsource/mulish';
             name="viewport"
             content="width=device-width"
         />
+        <link
+            rel="sitemap"
+            href="/sitemap-index.xml"
+        />
         <slot name="head" />
         <ViewTransitions />
     </head>
