changed url for articles

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -2,7 +2,7 @@
     <nav class="flex flex-col justify-between gap-6 tn:flex-row">
         <a href="/"><h1 class="text-xl font-bold">Krzysztof Adamczak</h1></a>
         <menu>
-            <li class="text-lg"><a href="/articles/">Artykuły</a></li>
+            <li class="text-lg"><a href="/artykuly/">Artykuły</a></li>
         </menu>
     </nav>
 </header>
