--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -33,7 +33,7 @@ publishedEntries
         </div>
         <a
             class="ml-auto mt-auto w-fit bg-neutral-950 px-4 py-2 text-neutral-50 transition-colors hover:bg-neutral-800"
-            href="/articles"
+            href="/artykuly"
             >Zobacz wszystkie</a
         >
     </div>
