fixed url in articles list

--- a/src/components/ArticlesList.astro
+++ b/src/components/ArticlesList.astro
@@ -20,7 +20,7 @@ const { publishedEntries } = Astro.props;
                             <h3 class="text-2xl font-bold transition-colors hover:text-neutral-800">
                                 <a
                                     data-astro-prefetch
-                                    href={`${entry.slug}`}
+                                    href={`/${entry.slug}`}
                                 >
                                     {entry.data.title}
                                 </a>
