--- a/src/components/ArticlesList.astro
+++ b/src/components/ArticlesList.astro
@@ -1,6 +1,6 @@
 ---
 import { Image } from 'astro:assets';
-import { getCollection, type CollectionEntry } from 'astro:content';
+import { type CollectionEntry } from 'astro:content';
 import { format } from 'date-fns/format';
 import { pl } from 'date-fns/locale/pl';
 
