--- a/src/components/Newsletter.astro
+++ b/src/components/Newsletter.astro
@@ -30,9 +30,31 @@
                 </label>
                 <button
                     id="_newsletter"
-                    class="h-[42px] w-full self-end bg-neutral-950 px-8 text-neutral-50 tn:w-max"
-                    >Zapisz się</button
+                    class="h-[42px] w-full self-end bg-neutral-950 text-neutral-50 tn:w-36"
                 >
+                    Zapisz się
+                </button>
+                <div
+                    id="_loader"
+                    class="hidden h-[42px] w-full items-center justify-center self-end bg-neutral-950 tn:w-36"
+                >
+                    <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="24"
+                        height="24"
+                        viewBox="0 0 24 24"
+                        stroke="currentColor"
+                        stroke-width="2"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                        class="animate-spin stroke-neutral-50"
+                        ><path
+                            stroke="none"
+                            d="M0 0h24v24H0z"
+                            fill="none"
+                        ></path><path d="M12 3a9 9 0 1 0 9 9"></path></svg
+                    >
+                </div>
             </div>
         </div>
     </div>
@@ -42,6 +64,7 @@
     const firstName = document.querySelector<HTMLInputElement>('#_firstName');
     const email = document.querySelector<HTMLInputElement>('#_email');
     const send = document.querySelector<HTMLButtonElement>('#_newsletter');
+    const loader = document.querySelector<HTMLButtonElement>('#_loader');
     const newsletterBody = document.querySelector<HTMLDivElement>('#_newsletter-body');
     const formBody = document.querySelector<HTMLDivElement>('#_form-body');
 
@@ -50,11 +73,13 @@
     send?.addEventListener('click', async () => {
         const isNameEmpty = firstName?.value.length === 0;
         const isEmailInvalid = emailRegex.test(email?.value ?? '') === false;
-        console.log('🚀 ~ send?.addEventListener ~ isEmailInvalid:', isEmailInvalid);
-        console.log('🚀 ~ send?.addEventListener ~ isNameEmpty:', isNameEmpty);
+
         if (isNameEmpty || isEmailInvalid) return;
-        console.log('🚀 ~ send?.addEventListener ~ isEmailInvalid:', isEmailInvalid);
-        console.log('🚀 ~ send?.addEventListener ~ isNameEmpty:', isNameEmpty);
+
+        send.remove();
+        loader?.classList.remove('hidden');
+        loader?.classList.add('flex');
+
         const response = await fetch('https://kosmonavta.pl/api/krzysztofadamczak/newsletter', {
             method: 'POST',
             headers: {
@@ -67,14 +92,18 @@
         });
 
         const parsedResponse = await response.text();
-        console.log('🚀 ~ send?.addEventListener ~ parsedResponse:', parsedResponse);
 
-        // if (parsedResponse === 'subscribed') {
-        const message = document.createElement('p');
-        message.classList.add('text-3xl w-fit m-auto font-bold');
-        message.textContent = 'Udało się!';
-        newsletterBody?.appendChild(message);
         formBody?.remove();
-        // }
+
+        const message = document.createElement('p');
+        message.classList.add('text-3xl', 'w-fit', 'm-auto', 'font-bold');
+
+        if (parsedResponse === 'subscribed') {
+            message.textContent = 'Udało się!';
+        } else if (parsedResponse === 'error') {
+            message.textContent = 'Wystąpił błąd, spróbuj ponownie później.';
+        }
+
+        newsletterBody?.appendChild(message);
     });
 </script>
