fixed typos in article

--- a/src/components/ArticlesList.astro
+++ b/src/components/ArticlesList.astro
@@ -42,7 +42,7 @@ const { publishedEntries } = Astro.props;
                         </a>
                     </div>
                     <Image
-                        class="order-first flex max-h-[256px] w-full object-cover md:order-none md:max-h-[512px]"
+                        class="order-first flex h-full w-full object-cover md:order-none"
                         alt={entry.data.cover.alt}
                         src={entry.data.cover.src}
                     />
