added new article, minor fixes

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,7 +22,7 @@ publishedEntries
     <meta
         slot="head"
         name="description"
-        content="Cześć, nazywam się Krzysztof Adamczak i zajmuję się budowaniem aplikacji internetowych. Pomogę Ci przekuć Twój pomysł w gotowy produkt."
+        content="Chcesz zarazić się pasją do progamowania? Nazywam się Krzysztof Adamczak i zajmuję się budowaniem aplikacji internetowych."
     />
     <Hero />
     <Projects />
