--- a/src/components/Newsletter.astro
+++ b/src/components/Newsletter.astro
@@ -8,8 +8,9 @@
                 <span class="bg-neutral-950 px-3 py-1.5 text-neutral-50">Zapisz się</span> do newslettera
             </h2>
             <p class="prose prose-lg max-w-[80ch]">
-                Celem tego bloga jest przekuwanie pomysłów w gotowe produkty. Poinformuję Cię, kiedy opublikuję nowy
-                wpis a od czasu do czasu otrzymasz eklsuzywne treści których nie znajdziesz tutaj.
+                Programowanie jest dla mnie jak klocki LEGO. Możesz stworzyć co chcesz i jedyne co Cię ograniczna, to
+                Twoja wyobraźnia. Poinformuję Cię, kiedy opublikuję nowy wpis a od czasu do czasu otrzymasz eklsuzywne
+                treści których nie znajdziesz tutaj.
             </p>
 
             <p class="text-lg">Zero spamu. Możesz wypisać się w każdej chwili.</p>
