minor css fixes

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -7,14 +7,14 @@ import finansoholikCover from '../images/finansoholik_cover.webp';
     <h2 class="text-4xl font-extrabold">Projekty</h2>
 
     <div class="grid grid-cols-1 gap-8 lg:grid-cols-2 3xl:grid-cols-3">
-        <div class="relative grid items-start gap-8 bg-neutral-950 lg:aspect-square lg:gap-0">
+        <div class="relative bg-neutral-950 lg:aspect-square">
             <Image
                 loading="lazy"
                 src={finansoholikCover}
                 class="absolute z-0 h-full w-full self-center justify-self-center overflow-clip object-cover"
                 alt="Zdjęcie przedstawiające autora"
             />
-            <div class="z-10 grid h-full bg-neutral-950/90 p-10 backdrop-blur-[5px]">
+            <div class="z-10 grid h-full gap-8 bg-neutral-950/85 p-6 backdrop-blur-[5px] lg:gap-0 lg:p-10">
                 <p class="text-3xl font-black text-neutral-50">Finansoholik</p>
                 <p class="prose prose-lg my-auto text-justify text-neutral-50">
                     Finansoholik to aplikacja, która ułatwi Ci zarządzanie własnym budżetem. Korzystając z niego możesz
