--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -13,7 +13,7 @@ import photo from '../images/photo.webp';
             </p>
 
             <p>
-                Porozmawiamy o zwariowanym świecie <i>web developmentu</i> i nie tylko. Zobaczymy, że nie każdy pomsył jest
+                Porozmawiamy o zwariowanym świecie <i>web developmentu</i> i nie tylko. Zobaczymy, że nie każdy pomysł jest
                 dobry i zdecydowanie nic nie jest czarno-białe. Najważniejsze - nauczymy się wspólnie wielu rzeczy.
             </p>
         </div>
