fixed more typos

--- a/src/components/Newsletter.astro
+++ b/src/components/Newsletter.astro
@@ -8,9 +8,9 @@
                 <span class="bg-neutral-950 px-3 py-1.5 text-neutral-50">Zapisz się</span> do newslettera
             </h2>
             <p class="prose prose-lg max-w-[80ch]">
-                Programowanie jest dla mnie jak klocki LEGO. Możesz stworzyć co chcesz i jedyne co Cię ograniczna, to
+                Programowanie jest dla mnie jak klocki LEGO. Możesz stworzyć co chcesz i jedyne co Cię ogranicza to
                 Twoja wyobraźnia. Poinformuję Cię, kiedy opublikuję nowy wpis a od czasu do czasu otrzymasz eklsuzywne
-                treści których nie znajdziesz tutaj.
+                treści, których nie znajdziesz tutaj.
             </p>
 
             <p class="text-lg">Zero spamu. Możesz wypisać się w każdej chwili.</p>
