adds new article

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -5,7 +5,7 @@ import photo from '../images/photo.webp';
 
 <section class="flex flex-col items-center justify-between gap-16 sm:gap-32 xl:flex-row">
     <div>
-        <h2 class="mb-12 text-balance text-5xl font-bold md:text-6xl">Kod na co dzień.</h2>
+        <h2 class="mb-12 text-balance text-5xl font-bold md:text-6xl">Frontend na backendzie.</h2>
         <div class="prose prose-lg">
             <p>
                 Cześć, nazywam się Krzysztof Adamczak i zajmuję się budowaniem aplikacji internetowych. Programowanie to
