--- a/src/layouts/SiteLayout.astro
+++ b/src/layouts/SiteLayout.astro
@@ -25,7 +25,7 @@ import '@fontsource/mulish';
         <ViewTransitions />
     </head>
     <body
-        class="max mx-auto mb-32 mt-16 flex w-full max-w-full flex-col gap-16 px-8 text-neutral-900 sm:gap-32 xl:max-w-screen-lg 2xl:max-w-screen-xl 2xl:gap-52 3xl:max-w-screen-2xl ultra:max-w-screen-3xl"
+        class="mx-auto mb-32 mt-16 flex w-full max-w-full flex-col gap-16 px-8 text-neutral-900 sm:gap-32 xl:max-w-screen-lg 2xl:max-w-screen-xl 2xl:gap-52 3xl:max-w-screen-2xl ultra:max-w-screen-3xl"
     >
         <Navigation />
         <main class="flex flex-col gap-16 sm:gap-32 2xl:gap-52">
